force-app/main/default/objects/Scheduling_Error_Log__c/Scheduling_Error_Log__c.object-meta.xml
<CustomObject>
    <description>Logs scheduling automation errors for retry and troubleshooting</description>
    <label>Scheduling Error Log</label>
    <nameField>
        <displayFormat>ERR-{0000}</displayFormat>
        <label>Error ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Scheduling Error Logs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>