force-app/main/default/objects/Scheduling_Error_Log__c/fields/Element_Name__c.field-meta.xml
<CustomField>
    <fullName>Element_Name__c</fullName>
    <description>The specific element in the flow that failed</description>
    <label>Element Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>