force-app/main/default/objects/Scheduling_Error_Log__c/fields/Flow_Name__c.field-meta.xml
<CustomField>
    <fullName>Flow_Name__c</fullName>
    <description>Name of the flow or process that encountered the error</description>
    <label>Flow/Process Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>