force-app/main/default/objects/Scheduling_Error_Log__c/fields/Source_Object__c.field-meta.xml
<CustomField>
    <fullName>Source_Object__c</fullName>
    <description>The object type of the source record</description>
    <label>Source Object</label>
    <length>80</length>
    <type>Text</type>
</CustomField>