force-app/main/default/objects/Scheduling_Error_Log__c/fields/Source_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Source_Record_Id__c</fullName>
    <description>The ID of the record that triggered the error</description>
    <label>Source Record ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>